third_party/move/move-compiler-v2/tests/checking/typing/global_builtins_invalid.exp

Diagnostics:
error: the function takes 1 argument but 0 were provided
  ┌─ tests/checking/typing/global_builtins_invalid.move:5:24
  │
5 │         let _ : bool = exists<R>();
  │                        ^^^^^^^^^^^

error: the function takes 2 arguments but 0 were provided
  ┌─ tests/checking/typing/global_builtins_invalid.move:6:18
  │
6 │         let () = move_to<R>();
  │                  ^^^^^^^^^^^^

error: the function takes 1 argument but 0 were provided
  ┌─ tests/checking/typing/global_builtins_invalid.move:7:22
  │
7 │         let _ : &R = borrow_global<R>();
  │                      ^^^^^^^^^^^^^^^^^^

error: the function takes 1 argument but 0 were provided
  ┌─ tests/checking/typing/global_builtins_invalid.move:8:26
  │
8 │         let _ : &mut R = borrow_global_mut<R>();
  │                          ^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 1 argument but 0 were provided
  ┌─ tests/checking/typing/global_builtins_invalid.move:9:20
  │
9 │         let R {} = move_from<R>();
  │                    ^^^^^^^^^^^^^^

error: cannot use `integer` with an operator which expects a value of type `address`
   ┌─ tests/checking/typing/global_builtins_invalid.move:13:34
   │
13 │         let _ : bool = exists<R>(0);
   │                                  ^

error: cannot use `integer` with an operator which expects a value of type `R`
   ┌─ tests/checking/typing/global_builtins_invalid.move:14:32
   │
14 │         let () = move_to<R>(a, 0);
   │                                ^

error: cannot use `integer` with an operator which expects a value of type `address`
   ┌─ tests/checking/typing/global_builtins_invalid.move:16:39
   │
16 │         let _ : &R = borrow_global<R>(0);
   │                                       ^

error: cannot use `integer` with an operator which expects a value of type `address`
   ┌─ tests/checking/typing/global_builtins_invalid.move:17:47
   │
17 │         let _ : &mut R = borrow_global_mut<R>(0);
   │                                               ^

error: cannot use `integer` with an operator which expects a value of type `address`
   ┌─ tests/checking/typing/global_builtins_invalid.move:18:33
   │
18 │         let R {} = move_from<R>(0);
   │                                 ^

error: the function takes 1 argument but 2 were provided
   ┌─ tests/checking/typing/global_builtins_invalid.move:22:24
   │
22 │         let _ : bool = exists<R>(@0x0, 0);
   │                        ^^^^^^^^^^^^^^^^^^

error: the function takes 2 arguments but 3 were provided
   ┌─ tests/checking/typing/global_builtins_invalid.move:23:18
   │
23 │         let () = move_to<R>(a, R{}, 0);
   │                  ^^^^^^^^^^^^^^^^^^^^^

error: the function takes 2 arguments but 3 were provided
   ┌─ tests/checking/typing/global_builtins_invalid.move:24:18
   │
24 │         let () = move_to(a, R{}, 0);
   │                  ^^^^^^^^^^^^^^^^^^

error: the function takes 1 argument but 2 were provided
   ┌─ tests/checking/typing/global_builtins_invalid.move:25:22
   │
25 │         let _ : &R = borrow_global<R>(@0x0, false);
   │                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 1 argument but 2 were provided
   ┌─ tests/checking/typing/global_builtins_invalid.move:26:26
   │
26 │         let _ : &mut R = borrow_global_mut<R>(@0x0, true);
   │                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 1 argument but 2 were provided
   ┌─ tests/checking/typing/global_builtins_invalid.move:27:20
   │
27 │         let R {} = move_from<R>(@0x0, 0);
   │                    ^^^^^^^^^^^^^^^^^^^^^
